--- a/Example.ipynb
+++ b/Example.ipynb
@@ -366,6 +366,17 @@
     "\n",
     "print( \"Difference of solution beta for different seeds \", np.linalg.norm(b1-b3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m,d,d_nonzero,k,sigma =20,100,5,1,0.5\n",
+    "(X,C,y),sol = random_data(m,d,d_nonzero,k,sigma,zerosum=True)\n",
+    "pathlasso"
+   ]
   }
  ],
  "metadata": {
@@ -384,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
