--- a/examples/Notebook.ipynb
+++ b/examples/Notebook.ipynb
@@ -6,14 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \n",
-    "import sys\n",
-    "cwd = os.path.split(os.getcwd())[0]\n",
-    "sys.path.insert(0, cwd)\n",
-    "\n",
-    "#!conda install --yes --prefix {sys.prefix} skbio\n",
-    "\n",
-    "from CLasso import *\n",
+    "! pip install --user <package>\n",
+    "from classo import *\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
