--- a/examples/Testing parameters.ipynb
+++ b/examples/Testing parameters.ipynb
@@ -17,7 +17,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Data "
    ]
@@ -25,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -62,7 +66,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -357,7 +363,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## R1"
    ]
@@ -365,7 +373,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "problem1.formulation.concomitant = False\n",
@@ -385,6 +395,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1947,7 +1958,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## R4"
    ]
@@ -1955,7 +1968,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "problem1.formulation.concomitant = True\n",
@@ -1975,6 +1990,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -3026,7 +3042,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## C2"
    ]
@@ -3034,7 +3052,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "problem1.formulation.concomitant = False\n",
@@ -3054,6 +3074,7 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -3532,6 +3553,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "166px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
