--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,6 +1,21 @@
 % Our citations
 
 
+@article{Aigner:1976,
+ ISSN = {00206598, 14682354},
+ URL = {http://www.jstor.org/stable/2525708},
+ author = {D. J. Aigner and T. Amemiya and D. J. Poirier},
+ journal = {International Economic Review},
+ number = {2},
+ pages = {377--396},
+ publisher = {[Economics Department of the University of Pennsylvania, Wiley, Institute of Social and Economic Research, Osaka University]},
+ title = {On the Estimation of Production Frontiers: Maximum Likelihood Estimation of the Parameters of a Discontinuous Density Function},
+ volume = {17},
+ year = {1976}
+}
+
+
+used
 @article{Briceno:2020,
 	Abstract = {In this paper, we provide an algorithm for solving constrained composite primal--dual monotone inclusions, i.e., monotone inclusions in which a priori information on primal--dual solutions is represented via closed and convex sets. The proposed algorithm incorporates a projection step onto the a priori information sets and generalizes methods proposed in the literature for solving monotone inclusions. Moreover, under the presence of strong monotonicity, we derive an accelerated scheme inspired on the primal--dual algorithm applied to the more general context of constrained monotone inclusions. In the particular case of convex optimization, our algorithm generalizes several primal--dual optimization methods by allowing a priori information on solutions. In addition, we provide an accelerated scheme under strong convexity. An application of our approach with a priori information is constrained convex optimization problems, in which available primal--dual methods impose constraints via Lagrange multiplier updates, usually leading to slow algorithms with unfeasible primal iterates. The proposed modification forces primal iterates to satisfy a selection of constraints onto which we can project, obtaining a faster method as numerical examples exhibit. The obtained results extend and improve several results in the literature.},
 	Author = {Brice{\~n}o-Arias, Luis and L{\'o}pez Rivera, Sergio},
@@ -21,7 +36,7 @@
 	Bdsk-Url-1 = {https://doi.org/10.1007/s10957-018-1430-2}
 }
 
-
+used
 @article{Combettes:2011,
   author = {Combettes, Patrick and Pesquet, Jean-Christophe},
   year = {2011},
@@ -33,7 +48,7 @@
   doi = {10.1007/s11228-011-0191-y}
   }
 
-
+used
 @article{Combettes:2020.1,
 author = "Combettes, Patrick L. and Müller, Christian L.",
 doi = "10.1214/19-EJS1662",
@@ -48,7 +63,7 @@ volume = "14",
 year = "2020"
 }
 
-
+used
 @article{Combettes:2020.2,
     Abstract = {Compositional data sets are ubiquitous in science, including geology, ecology, and microbiology. In microbiome research, compositional data primarily arise from high-throughput sequence-based profiling experiments. These data comprise microbial compositions in their natural habitat and are often paired with covariate measurements that characterize physicochemical habitat properties or the physiology of the host. Inferring parsimonious statistical associations between microbial compositions and habitat- or host-specific covariate data is an important step in exploratory data analysis. A standard statistical model linking compositional covariates to continuous outcomes is the linear log-contrast model. This model describes the response as a linear combination of log-ratios of the original compositions and has been extended to the high-dimensional setting via regularization. In this contribution, we propose a general convex optimization model for linear log-contrast regression which includes many previous proposals as special cases. We introduce a proximal algorithm that solves the resulting constrained optimization problem exactly with rigorous convergence guarantees. We illustrate the versatility of our approach by investigating the performance of several model instances on soil and gut microbiome data analysis tasks.},
     Author = {Combettes, Patrick L. and M{\"u}ller, Christian L.},
@@ -66,7 +81,7 @@ year = "2020"
     Bdsk-Url-1 = {https://doi.org/10.1007/s12561-020-09283-2}
 }
 
-
+used
 @article{Gaines:2018,
     author = {Brian R. Gaines and Juhyun Kim and Hua Zhou},
     title = {Algorithms for Fitting the Constrained Lasso},
@@ -95,7 +110,7 @@ year = "2020"
     URL = {https://doi.org/10.1080/01621459.2019.1609970},
     eprint = { https://doi.org/10.1080/01621459.2019.1609970}
 }
-
+used
 @book{Hastie:2009,
   title={The Elements of Statistical Learning: Data Mining, Inference, and Prediction},
   author={Hastie, T. and Tibshirani, R. and Friedman, J.H.},
@@ -121,7 +136,7 @@ year = "2020"
     abstract = 
             "We consider the LASSO estimator for compositional data in which covariates are nonnegative, and their sum is always one. Due to the linear constraint of the regression coefficients caused by the sum to one condition, standard algorithms for LASSO cannot be applied directly to compositional data. Hence, a specific regularized regression model with linear constraints is commonly used. However, linear constraints incur additional computational time, which becomes severe in high-dimensional cases. Additionally, the exact computation for the regression is not investigated under existing methods. In this paper, we first propose an exact solution path algorithm for a l1 regularized regression with high-dimensional compositional data and extend to a classification model. We also compare its computational speed with that of previously developed algorithms and then apply the proposed algorithm to analyzing income inequality data in economics and human gut microbiome data in biology. By analyzing simulated and real data sets, we illustrate that our specialized algorithm is significantly more efficient than the generalized LASSO algorithm for compositional data."
 }
-
+used
 @article{Lin:2014,
  ISSN = {00063444},
  URL = {http://www.jstor.org/stable/43304688},
@@ -136,6 +151,7 @@ year = "2020"
  year = {2014}
 }
 
+used
 @article{Meinshausen:2010,
   author = {Meinshausen, Nicolai and Bühlmann, Peter},
   title = {Stability selection},
@@ -151,8 +167,7 @@ year = "2020"
   year = {2010}
   }
 
-
-
+used
 @article{Mishra:2019,
     author = {Mishra, Aditya and Müller, Christian},
     year = {2019},
