--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -136,7 +136,19 @@ used
     abstract = 
             "We consider the LASSO estimator for compositional data in which covariates are nonnegative, and their sum is always one. Due to the linear constraint of the regression coefficients caused by the sum to one condition, standard algorithms for LASSO cannot be applied directly to compositional data. Hence, a specific regularized regression model with linear constraints is commonly used. However, linear constraints incur additional computational time, which becomes severe in high-dimensional cases. Additionally, the exact computation for the regression is not investigated under existing methods. In this paper, we first propose an exact solution path algorithm for a l1 regularized regression with high-dimensional compositional data and extend to a classification model. We also compare its computational speed with that of previously developed algorithms and then apply the proposed algorithm to analyzing income inequality data in economics and human gut microbiome data in biology. By analyzing simulated and real data sets, we illustrate that our specialized algorithm is significantly more efficient than the generalized LASSO algorithm for compositional data."
 }
-used
+
+@article{Lee:2013,
+author = {Lee, Ching-Pei and Lin, Chih-Jen},
+year = {2013},
+month = {03},
+pages = {},
+title = {A study on L2-loss (Squared Hinge-Loss) multiclass SVM},
+volume = {25},
+journal = {Neural computation},
+doi = {10.1162/NECO_a_00434}
+}
+
+
 @article{Lin:2014,
  ISSN = {00063444},
  URL = {http://www.jstor.org/stable/43304688},
@@ -151,7 +163,7 @@ used
  year = {2014}
 }
 
-used
+
 @article{Meinshausen:2010,
   author = {Meinshausen, Nicolai and Bühlmann, Peter},
   title = {Stability selection},
@@ -167,7 +179,7 @@ used
   year = {2010}
   }
 
-used
+
 @article{Mishra:2019,
     author = {Mishra, Aditya and Müller, Christian},
     year = {2019},
@@ -209,134 +221,3 @@ used
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-% Citations of the template
-
-@Book{Cameron+Trivedi:2013,
-  author = {A. Colin Cameron and Pravin K. Trivedi},
-  title = {Regression Analysis of Count Data},
-  year = {2013},
-  edition = {2nd},
-  publisher = {Cambridge University Press},
-  address = {Cambridge},
-}
-
-@Book{Chambers+Hastie:1992,
-  editor = {John M. Chambers and Trevor J. Hastie},
-  title = {Statistical Models in \proglang{S}},
-  publisher = {Chapman \& Hall},
-  year = {1992},
-  address = {London},
-}
-
-@Manual{Jackman:2015,
-  title = {\pkg{pscl}: Classes and Methods for \proglang{R} Developed in the Political Science Computational Laboratory, Stanford University},
-  author = {Simon Jackman},
-  year = {2015},
-  note = {\proglang{R} package version 1.4.9},
-  url = {https://CRAN.R-project.org/package=pscl},
-}
-
-@Article{Mullahy:1986,
-  author = {John Mullahy},
-  title = {Specification and Testing of Some Modified Count Data Models},
-  year = {1986},
-  journal = {Journal of Econometrics},
-  volume = {33},
-  number = {3},
-  pages = {341--365},
-  doi = {10.1016/0304-4076(86)90002-3},
-}
-
-@Book{McCullagh+Nelder:1989,
-  author = {Peter McCullagh and John A. Nelder},
-  title = {Generalized Linear Models},
-  edition = {2nd},
-  year = {1989},
-  publisher = {Chapman \& Hall},
-  address = {London},
-  doi = {10.1007/978-1-4899-3242-6},
-}
-
-@Manual{R,
-  title = {\proglang{R}: {A} Language and Environment for Statistical Computing},
-  author = {{\proglang{R} Core Team}},
-  organization = {\proglang{R} Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2017},
-  url = {https://www.R-project.org/},
-}
-
-@Article{Stasinopoulos+Rigby:2007,
-  author = {D. Mikis Stasinopoulos and Robert A. Rigby},
-  title = {Generalized Additive Models for Location Scale and Shape ({GAMLSS}) in \proglang{R}},
-  journal = {Journal of Statistical Software},
-  year = {2007},
-  volume = {23},
-  number = {7},
-  pages = {1--46},
-  doi = {10.18637/jss.v023.i07},
-}
-
-@Book{Venables+Ripley:2002,
-  author = {William N. Venables and Brian D. Ripley},
-  title = {Modern Applied Statistics with \proglang{S}},
-  edition = {4th},
-  year = {2002},
-  pages = {495},
-  publisher = {Springer-Verlag},
-  address = {New York},
-  doi = {10.1007/978-0-387-21706-2},
-}
-
-@Book{Wood:2006,
-  author = {Simon N. Wood},
-  title = {Generalized Additive Models: An Introduction with \proglang{R}},
-  year = {2006},
-  publisher = {Chapman \& Hall/CRC},
-  address = {Boca Raton},
-}
-
-@Article{Yee:2009,
-  author = {Thomas W. Yee},
-  title = {The \pkg{VGAM} Package for Categorical Data Analysis},
-  journal = {Journal of Statistical Software},
-  year = {2010},
-  volume = {32},
-  number = {10},
-  pages = {1--34},
-  doi = {10.18637/jss.v032.i10},
-}
-
-@Article{Zeileis+Kleiber+Jackman:2008,
-  author = {Achim Zeileis and Christian Kleiber and Simon Jackman},
-  title = {Regression Models for Count Data in \proglang{R}},
-  journal = {Journal of Statistical Software},
-  year = {2008},
-  volume = {27},
-  number = {8},
-  pages = {1--25},
-  doi = {10.18637/jss.v027.i08},
-}
