--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -15,7 +15,6 @@
 }
 
 
-used
 @article{Briceno:2020,
 	Abstract = {In this paper, we provide an algorithm for solving constrained composite primal--dual monotone inclusions, i.e., monotone inclusions in which a priori information on primal--dual solutions is represented via closed and convex sets. The proposed algorithm incorporates a projection step onto the a priori information sets and generalizes methods proposed in the literature for solving monotone inclusions. Moreover, under the presence of strong monotonicity, we derive an accelerated scheme inspired on the primal--dual algorithm applied to the more general context of constrained monotone inclusions. In the particular case of convex optimization, our algorithm generalizes several primal--dual optimization methods by allowing a priori information on solutions. In addition, we provide an accelerated scheme under strong convexity. An application of our approach with a priori information is constrained convex optimization problems, in which available primal--dual methods impose constraints via Lagrange multiplier updates, usually leading to slow algorithms with unfeasible primal iterates. The proposed modification forces primal iterates to satisfy a selection of constraints onto which we can project, obtaining a faster method as numerical examples exhibit. The obtained results extend and improve several results in the literature.},
 	Author = {Brice{\~n}o-Arias, Luis and L{\'o}pez Rivera, Sergio},
@@ -36,7 +35,6 @@ used
 	Bdsk-Url-1 = {https://doi.org/10.1007/s10957-018-1430-2}
 }
 
-used
 @article{Combettes:2011,
   author = {Combettes, Patrick and Pesquet, Jean-Christophe},
   year = {2011},
@@ -48,8 +46,7 @@ used
   doi = {10.1007/s11228-011-0191-y}
   }
 
-used
-@article{Combettes:2020.1,
+@article{Combettes:2020,
 author = "Combettes, Patrick L. and Müller, Christian L.",
 doi = "10.1214/19-EJS1662",
 fjournal = "Electronic Journal of Statistics",
@@ -63,8 +60,7 @@ volume = "14",
 year = "2020"
 }
 
-used
-@article{Combettes:2020.2,
+@article{Muller:2020,
     Abstract = {Compositional data sets are ubiquitous in science, including geology, ecology, and microbiology. In microbiome research, compositional data primarily arise from high-throughput sequence-based profiling experiments. These data comprise microbial compositions in their natural habitat and are often paired with covariate measurements that characterize physicochemical habitat properties or the physiology of the host. Inferring parsimonious statistical associations between microbial compositions and habitat- or host-specific covariate data is an important step in exploratory data analysis. A standard statistical model linking compositional covariates to continuous outcomes is the linear log-contrast model. This model describes the response as a linear combination of log-ratios of the original compositions and has been extended to the high-dimensional setting via regularization. In this contribution, we propose a general convex optimization model for linear log-contrast regression which includes many previous proposals as special cases. We introduce a proximal algorithm that solves the resulting constrained optimization problem exactly with rigorous convergence guarantees. We illustrate the versatility of our approach by investigating the performance of several model instances on soil and gut microbiome data analysis tasks.},
     Author = {Combettes, Patrick L. and M{\"u}ller, Christian L.},
     Da = {2020/06/19},
@@ -81,7 +77,6 @@ used
     Bdsk-Url-1 = {https://doi.org/10.1007/s12561-020-09283-2}
 }
 
-used
 @article{Gaines:2018,
     author = {Brian R. Gaines and Juhyun Kim and Hua Zhou},
     title = {Algorithms for Fitting the Constrained Lasso},
@@ -110,7 +105,8 @@ used
     URL = {https://doi.org/10.1080/01621459.2019.1609970},
     eprint = { https://doi.org/10.1080/01621459.2019.1609970}
 }
-used
+
+
 @book{Hastie:2009,
   title={The Elements of Statistical Learning: Data Mining, Inference, and Prediction},
   author={Hastie, T. and Tibshirani, R. and Friedman, J.H.},
