--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,6 +1,5 @@
 % Our citations
 
-
 @article{Aigner:1976,
  ISSN = {00206598, 14682354},
  URL = {http://www.jstor.org/stable/2525708},
@@ -12,6 +11,22 @@
  title = {On the Estimation of Production Frontiers: Maximum Likelihood Estimation of the Parameters of a Discontinuous Density Function},
  volume = {17},
  year = {1976}
+}
+
+  @article{Aitchison:1984,
+    author = {AITCHISON, J. and BACON-SHONE, J.},
+    title = "{Log contrast models for experiments with mixtures}",
+    journal = {Biometrika},
+    volume = {71},
+    number = {2},
+    pages = {323-330},
+    year = {1984},
+    month = {08},
+    abstract = "{A new form of expected response function involving log contrasts of the proportions is introduced for experiments with mixtures. The advantages and disadvantages of log contrast models are discussed and illustrated in applications. In particular, the parameters of the model are related to certain useful hypotheses about mixtures and some relevant contrasts are identified.}",
+    issn = {0006-3444},
+    doi = {10.1093/biomet/71.2.323},
+    url = {https://doi.org/10.1093/biomet/71.2.323},
+    eprint = {https://academic.oup.com/biomet/article-pdf/71/2/323/635145/71-2-323.pdf},
 }
 
 
@@ -214,6 +229,8 @@ doi = {10.1162/NECO_a_00434}
     volume = "10",
     year = "2016"
     }
+
+
 
 
 
