--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,20 +1,17 @@
 % Our citations
 
-@article{Aigner:1976,
- ISSN = {00206598, 14682354},
- URL = {http://www.jstor.org/stable/2525708},
- author = {D. J. Aigner and T. Amemiya and D. J. Poirier},
- journal = {International Economic Review},
- number = {2},
- pages = {377--396},
- publisher = {[Economics Department of the University of Pennsylvania, Wiley, Institute of Social and Economic Research, Osaka University]},
- title = {On the Estimation of Production Frontiers: Maximum Likelihood Estimation of the Parameters of a Discontinuous Density Function},
- volume = {17},
- year = {1976}
+  @book{Huber:1981,
+	annote = {Wiley Series in Probability and Mathematical Statistics},
+	author = {Huber, P},
+	isbn = {0-471-41805-6},
+	publisher = {John Wiley {\&} Sons Inc.},
+	title = {{Robust statistics}},
+	year = {1981}
 }
 
+
   @article{Aitchison:1984,
-    author = {AITCHISON, J. and BACON-SHONE, J.},
+    author = {Aitchion, J. and Bacon-Shone, J.},
     title = "{Log contrast models for experiments with mixtures}",
     journal = {Biometrika},
     volume = {71},
