--- a/examples/debug.ipynb
+++ b/examples/debug.ipynb
@@ -60,18 +60,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-07T12:04:54.192651Z",
-     "start_time": "2020-10-07T12:04:54.172398Z"
+     "end_time": "2020-10-07T12:06:31.425753Z",
+     "start_time": "2020-10-07T12:06:31.365800Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3.30144058  0.58386303  2.31976916 -0.60557888  0.93300205  0.63726902\n",
+      "  -2.02423059 -1.21275954  1.91600461  0.45832881  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.58386303  1.5127568  -0.02789485  0.21582717 -0.64475914 -1.76519624\n",
+      "  -0.65486948 -0.95272671  0.4602614  -0.87035601  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 2.31976916 -0.02789485  6.80776665 -0.42451316  0.02251993  3.6053549\n",
+      "  -2.56130413 -1.74629451  0.96206429 -0.96067905  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [-0.60557888  0.21582717 -0.42451316  0.74279254 -1.35217083 -0.68844718\n",
+      "   1.28404249  1.46432837 -1.07140334  0.32347868  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.93300205 -0.64475914  0.02251993 -1.35217083  3.85185449  2.3842837\n",
+      "  -1.66070792 -3.45544618  2.45349856 -1.32405279  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.63726902 -1.76519624  3.6053549  -0.68844718  2.3842837   5.23332006\n",
+      "  -0.68163755 -1.52408175  0.90113279 -0.78981742  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [-2.02423059 -0.65486948 -2.56130413  1.28404249 -1.66070792 -0.68163755\n",
+      "   3.4930748   3.48214518 -2.31071317  1.23015327  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [-1.21275954 -0.95272671 -1.74629451  1.46432837 -3.45544618 -1.52408175\n",
+      "   3.48214518  5.95799922 -3.20121248  3.46600548  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 1.91600461  0.4602614   0.96206429 -1.07140334  2.45349856  0.90113279\n",
+      "  -2.31071317 -3.20121248  2.43953889 -1.13853224  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.45832881 -0.87035601 -0.96067905  0.32347868 -1.32405279 -0.78981742\n",
+      "   1.23015327  3.46600548 -1.13853224  2.98437011  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.        ]]\n",
+      "[[ 3.30144058  0.58386303  2.31976916 -0.60557888  0.93300205  0.63726902\n",
+      "  -2.02423059 -1.21275954  1.91600461  0.45832881  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.58386303  1.5127568  -0.02789485  0.21582717 -0.64475914 -1.76519624\n",
+      "  -0.65486948 -0.95272671  0.4602614  -0.87035601  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 2.31976916 -0.02789485  6.80776665 -0.42451316  0.02251993  3.6053549\n",
+      "  -2.56130413 -1.74629451  0.96206429 -0.96067905  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [-0.60557888  0.21582717 -0.42451316  0.74279254 -1.35217083 -0.68844718\n",
+      "   1.28404249  1.46432837 -1.07140334  0.32347868  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.93300205 -0.64475914  0.02251993 -1.35217083  3.85185449  2.3842837\n",
+      "  -1.66070792 -3.45544618  2.45349856 -1.32405279  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.63726902 -1.76519624  3.6053549  -0.68844718  2.3842837   5.23332006\n",
+      "  -0.68163755 -1.52408175  0.90113279 -0.78981742  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [-2.02423059 -0.65486948 -2.56130413  1.28404249 -1.66070792 -0.68163755\n",
+      "   3.4930748   3.48214518 -2.31071317  1.23015327  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [-1.21275954 -0.95272671 -1.74629451  1.46432837 -3.45544618 -1.52408175\n",
+      "   3.48214518  5.95799922 -3.20121248  3.46600548  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 1.91600461  0.4602614   0.96206429 -1.07140334  2.45349856  0.90113279\n",
+      "  -2.31071317 -3.20121248  2.43953889 -1.13853224  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.45832881 -0.87035601 -0.96067905  0.32347868 -1.32405279 -0.78981742\n",
+      "   1.23015327  3.46600548 -1.13853224  2.98437011  0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.          0.          0.          0.\n",
+      "   0.          0.          0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "AtA = pb1.AtA\n",
     "A = pb1.matrix[0]\n",
-    "beta1 = Classo_R1(pb1, 0.1)[:d]"
+    "print(pb1.AtA)\n",
+    "beta1 = Classo_R1(pb1, 0.1)[:d]\n",
+    "print(pb1.AtA)"
    ]
   },
   {
@@ -136,9 +235,7 @@
      ]
     }
    ],
-   "source": [
-    "print(pb1.AtA)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
